# nest_struct

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  README.tpl  bacon.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml  draft-new-release.yml
src/: lib.rs
tests/: develop.rs  playground.rs  tests.rs
tests/cases/: 1_level_nested_struct.expanded.rs  1_level_nested_struct.rs  1_level_nested_struct_with_generic.expanded.rs  1_level_nested_struct_with_generic.rs  1_level_nested_struct_with_generic_and_lifetime.expanded.rs  1_level_nested_struct_with_generic_and_lifetime.rs  3_level_nested_struct.expanded.rs  3_level_nested_struct.rs  3_level_nested_struct_with_generic.expanded.rs  3_level_nested_struct_with_generic.rs  empty_struct.expanded.rs  empty_struct.rs  non-nested_struct.expanded.rs  non-nested_struct.rs
tests/cases/block/: 1_empty_block.expanded.rs  1_empty_block.rs  2_enum_block.expanded.rs  2_enum_block.rs  2_struct_block.expanded.rs  2_struct_block.rs
tests/cases/enum/: 1_empty.expanded.rs  1_empty.rs  2_non-nested.expanded.rs  2_non-nested.rs  3_nested_enum_and_struct.expanded.rs  3_nested_enum_and_struct.rs  4_generic_type_and_lifetime.expanded.rs  4_generic_type_and_lifetime.rs  5_attribtute_marco.expanded.rs  5_attribtute_marco.rs  6_deep_nested.expanded.rs  6_deep_nested.rs  7_overwrite_auto-generated_name.expanded.rs  7_overwrite_auto-generated_name.rs
tests/cases/parse_error/: 1_missing_semicolon_in_struct.rs  1_missing_semicolon_in_struct.stderr  1_nested_struct_and_enum.stderr  2_missing_semicolon_in_enum.rs  2_missing_semicolon_in_enum.stderr  2_more_than_one_stmt_in_block.stderr  3_func_call_in_block.rs  3_func_call_in_block.stderr  3_missing_semicolon_in_block.rs  3_missing_semicolon_in_block.stderr  3_nested_struct_and_enum.rs  3_nested_struct_and_enum.stderr  4_const_stmt_in_block.stderr  4_more_than_one_stmt_in_block.rs  4_more_than_one_stmt_in_block.stderr  5_func_call_in_block.stderr  6_const_stmt_in_block.rs  6_const_stmt_in_block.stderr
tests/cases/struct/: 1_empty.expanded.rs  1_empty.rs  2_non-nested.expanded.rs  2_non-nested.rs  3_nested.expanded.rs  3_nested.rs  3_nested_struct_and_enum.expanded.rs  3_nested_struct_and_enum.rs  4_generic_type_and_lifetime.expanded.rs  4_generic_type_and_lifetime.rs  5_attribtute_marco.expanded.rs  5_attribtute_marco.rs  6_deep_nested.expanded.rs  (+3 more)
tests/expand/: hello_world.expanded.rs  hello_world.rs
