[package]
name = "nest_struct"
version = "0.3.3"
edition = "2021"
authors = ["ZibanPirate <zakman.dev@gmail.com>"]
description = "Nest struct and enum definitions with minimal syntax changes"
license = "MIT"
repository = "https://github.com/ZibanPirate/nest_struct"
readme = "README.md"
keywords = ["nest", "struct", "enum", "macro"]
categories = [
    "data-structures",
    "development-tools",
    "rust-patterns",
    "web-programming",
]

[dependencies]
convert_case = "0.6.0"
proc-macro2 = "1"
quote = "1"
syn = "2"

[dev-dependencies]
macrotest = "1"
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"

[lib]
proc-macro = true
path = "src/lib.rs"

[badges]
maintenance = { status = "actively-developed" }
