[package]
name = "nest_struct"
version = "0.5.4"
edition = "2021"
authors = ["ZibanPirate <zakman.dev@gmail.com>"]
description = "Nest struct and enum definitions with minimal syntax changes"
license = "MIT"
repository = "https://github.com/ZibanPirate/nest_struct"
readme = "README.md"
keywords = ["nest", "struct", "enum", "macro"]
categories = [
    "data-structures",
    "development-tools",
    "rust-patterns",
    "web-programming",
]

[dependencies]
convert_case = "0.7"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
macrotest = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
proc-macro = true
path = "src/lib.rs"
